Changes for 2.4.4rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Japanese, Korean and Slovak translations; thanks to Zabbix translators (Richlv)
A.F....PS. [ZBXNEXT-2160] added support for extended IP ranges in network discovery and action conditions (Ivo, Sasha, Wiper)

Bug fixes:
.......P.. [ZBX-9195] fixed lastlogsize and mtime being updated on proxy for unsupported items; thanks to Yoshinori Komuro for patch (asaveljevs, Sasha)
..F....... [ZBX-9010] fixed audit actions not displaying most recent logs when record count exceeds maximum (Krists)
...G...PS. [ZBX-8555] fixed 'broken pipe' errors when executing remote commands. This was happening because pipe was closed without reading from it (wiper)
.......PS. [ZBX-8828] made ICMP items go unsupported if ICMP packets cannot be sent to their host (asaveljevs)
.......PS. [ZBX-9163] fixed SNMPERR_TOO_LONG error being wrongly treated as a network error; thanks to Santal for patch (asaveljevs)
...G...... [ZBX-6047] fixed system.boottime and system.uptime returning incorrect results on Solaris zones (asaveljevs)
..F....... [ZBX-8874] fixed LLD rule form flexible interval field being submitted when other form fields are in focus (Ivo)
....I..... [ZBX-9169] fixed upgrade of the proxy database with several discovery rules (Sasha)
........S. [ZBX-9176] fixed {DISCOVERY.SERVICE.NAME} macro to expand properly for HTTPS and Telnet services (asaveljevs)
....I..... [ZBX-9185] fixed upgrade procedure in case database version is greater than version of the binary (Sasha)
..F....... [ZBX-9177] improved host and item name column widths on Monitoring / Latest data page (Krists)
.......PS. [ZBX-9154] fixed compilation error with Oracle backend (wiper)
..F....... [ZBX-9042] unified "mass update" spelling in trigger configuration page (Richlv)
..F....... [ZBX-9153] fixed vmware.version item key being listed as vmware.eventlog in the item key helper (Richlv)